OPENNLP-1829: Transfer DirectoryModelFinder to OpenNLP core